# hive

./: AGENTS.md  README.ja.md  README.md  README.zh-CN.md  SPEC.md  pyproject.toml
docs/: notify-effects-hacker-lock.md  runtime-model.md  transcript-signals.md
docs/research/: README.md  building-agents-with-claude-agent-sdk.md  building-c-compiler.md  building-effective-agents.md  claude-code-best-practices.md  code-execution-with-mcp.md  demystifying-evals.md  effective-context-engineering.md  effective-harnesses-for-long-running-agents.md  enabling-claude-code-to-work-more-autonomously.md  equipping-agents-for-the-real-world-with-agent-skills.md  harness-design-long-running-apps.md  managed-agents.md  multi-agent-research-system.md  sdk-subagents.md  sub-agents.md  swe-bench-sonnet.md  writing-tools-for-agents.md
scripts/: poc_notify.sh  poc_notify_flash.sh  poc_notify_focus.sh  poc_notify_hud.sh  poc_notify_native_hud.sh  poc_notify_overlay.sh  poc_notify_overlay.swift
skill/: SKILL.md
skills/gang/: SKILL.md
skills/gang-orch/: SKILL.md
skills/gang-skeptic/: SKILL.md
skills/gang-validator/: SKILL.md
skills/gang-worker/: SKILL.md
skills/hive/: SKILL.md
src/hive/: __init__.py  activity.py  agent.py  agent_cli.py  bus.py  cli.py  context.py  core_hooks.py  devlog.py  draft_guard.py  gang_names.py  layout.py  notify_debug.py  notify_hook.py  notify_state.py  notify_ui.py  plugin_manager.py  proc_info.py  runtime_snapshot.py  runtime_state.py  settings.py  (+4 more)
tests/: conftest.py  test_agent_spawn.py  test_cli_im.py  test_cli_workspace.py  test_smoke.py
(+135 files in other folders)
