[project]
name = "mission"
version = "0.1.0"
description = "tmux-based multi-agent collaboration framework for Factory's droid CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
mission = "mission.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mission"]
