[project]
name = "hive"
version = "0.4.4"
description = "tmux-based multi-agent collaboration framework for droid, claude, and codex"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
hive = "hive.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/hive/core_assets/**",
    "src/hive/plugins/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.pytest.ini_options]
markers = [
    "unit: fast isolated unit tests",
    "cli: click CLI tests with mocked dependencies",
    "e2e: end-to-end tests with real tmux/runtime behavior",
]
